# SCFT

./: .cproject  .gitignore  .project  1D_FEM.c  AndMix.m  Doolsub.m  Exp_m1024_n2048_IE.res  FEM.docx  Makefile  NR_chen.h  README.md  a.out  adm.c  broyden.m  broyden_wq.m  broydn.c  drive.m  driveADM.c  gauss.m  nrutil.c  pivot.m  simple_FEM_1D.m  simple_FEM_1D_transient.m  step-26.cc  temp1.m
DEALII_SCFT/: .cproject  .project  CMakeLists.txt  Makefile  N=33_for_read.txt  drivescft.cc  redoFxandshowError.cc  result.txt  scft.cc  solution_store.txt  step-3.cc  testFiBar.cc  test_ADM.c
DEALII_SCFT/include/: NR_chen.h  SCFT.h  scft_urtil.h
DEALII_SCFT/inputFiles/: Exp_m1024_n8192_IE.res  Exp_m128_n2048_IE.res  Exp_m256_n2048_IE.res  Exp_m32_n2048_IE.res  Exp_m512_n2048_IE.res  Exp_m64_n2048_IE.res  N=33_for_read.txt
DEALII_SCFT/src/: ADM_chen_C.c  broydn.c  fdjac.c  polint.c  romint.c  rsolv.c  scft.cc  scft_util.cc  spline_chen.c
Matlab_files/: IRK4.m  N=33_for_read.txt  adm_chen.m  broyden_wq.m  drive.m  drive.m~  drive_IRK4.m  drive_SCFT.m  drive_adm_chen.m  drive_spline.m  gauss.m  plotResults.m  read_input.m  refine_mesh.m  set_f0_given.m  simple_FEM_1D_transient.m  solution_yita_1D_N= 59.txt  spline_chen.m  spline_chen.m~  temp1.m  temp2.m~  temp3.m  temp4.m  test_SCFT_connverge.m
Matlab_files/inputFiles/: solution_matlab_N=33  solution_yita_1D_N= 141.txt  solution_yita_1D_N= 225.txt  solution_yita_1D_N= 33.txt  solution_yita_1D_N= 43.txt  solution_yita_1D_N= 59.txt  solution_yita_1D_N= 91.txt
SCFT-master/: Makefile  Math.ppsx  broydn.c  gaussj.c  nr.h
SCFT-master/DEALII_SCFT/: step-3.cc
SCFT-master/Matlab_files/: Doolittle.m  backsub.m  broyden_wq.m  inverse.m  output2d.m  simple_FEM_1D_transient.m  temp2.m  why.m
